Global Fix for Scroll Bar
Prevent page content from shifting/resizing when scrollbar is present.

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
+html.disable-fix {
+    overflow-x: initial;
+    margin-right: initial;
+}
+
 @layer base {
     a {
         @apply text-content-accent underline hover:text-content-body;
